--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="cartao__conteudo">
             <h3>Programação</h3>
             <div class="cartao__conteudo__pergunta">
-                    O que é CSS?
+                CSS é uma linguagem baseada em regras. — Você define regras especificando grupos de estilo que devem ser aplicados para elementos particulares ou grupos de elementos na sua página web. Por exemplo, "Quero que o título principal, na minha página, seja mostrado como um texto grande e de cor vermelha.
             </div>
             <div class="cartao__conteudo__resposta">
                     O CSS é uma linguagem de estilização
