--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="cartao__conteudo">
             <h3>Programação</h3>
             <div class="cartao__conteudo__pergunta">
-                CSS é uma linguagem baseada em regras. — Você define regras especificando grupos de estilo que devem ser aplicados para elementos particulares ou grupos de elementos na sua página web. Por exemplo, "Quero que o título principal, na minha página, seja mostrado como um texto grande e de cor vermelha.
+              O que é css?  CSS é uma linguagem baseada em regras. — Você define regras especificando grupos de estilo que devem ser aplicados para elementos particulares ou grupos de elementos na sua página web. Por exemplo, "Quero que o título principal, na minha página, seja mostrado como um texto grande e de cor vermelha.
             </div>
             <div class="cartao__conteudo__resposta">
-                    O CSS é uma linguagem de estilização
+                    O CSS é uma linguagem de estilizaçãoCSS é chamado de linguagem Cascading Style Sheet e é usado para estilizar elementos escritos em uma linguagem de marcação como HTML. O CSS separa o conteúdo da representação visual do site. Pense na decoração da sua página
             </div>
     </div>
 </article>
