--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png">
-    <title>@Rasinformatica</title>
+    <title>@mariacanedoo</title>
 </head>
 <style>
     body{
@@ -35,7 +35,7 @@
   </style>
 <body>
     <div>
-        <h1> @rasinformática </h1>
+        <h1> @mariacanedoo </h1>
     
     </div>
 
