--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </main>
     
     <footer>
-        <p>@rasinformática</p>
+        <p>@mariacanedoo</p>
         
     </footer>
     <script src="app.js"></script>
